# pa

./: pa.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Patches.hs  Plugin.hs  Scores.hs  TempA.hs  Tracks.hs
