name:                pa
version:             0.1.0.0

description:         tools based on csound-expression for algorithmic composition, 
                     sound design and production of electronic music. 
                     all code is supposed to make making music easier for just myself,
                     however everybody who wants to can use it and i try to keep core parts
                     reasonably readable.

synopsis:            my personal collection of audio tools for music production.
homepage:            https://github.com/sebastianpfluegelmeier/pa.git
license:             GPL-3
license-file:        LICENSE
author:              Sebastian Pfluegelmeier
maintainer:          pfluegelmeier.s@gmx.at
copyright:           2017 Sebastian Pfluegelmeier
category:            Audio
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Tracks
  build-depends:       base >= 4.7 && < 5
                     , csound-expression
  default-language:    Haskell2010

executable pa-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pa
                     , csound-expression
                     , csound-sampler
  default-language:    Haskell2010

test-suite pa-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pa
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pa
